hphp/hack/test/typecheck/constraints/class_type_parameter.php.exp
File "class_type_parameter.php", line 6, characters 34-43:
Some type constraint(s) here are violated (Typing[4110])
File "class_type_parameter.php", line 3, characters 22-22:
'T' is a constrained type
File "class_type_parameter.php", line 3, characters 27-29:
This is a num (int/float)
File "class_type_parameter.php", line 6, characters 45-45:
It is incompatible with a value of generic type T
